# uml-server

./: .gitattributes  .gitignore  COPYRIGHT  Readme.md  flake.nix  meson.build  meson.options
include/test/: umlSererTest.h
include/uml-server/: constants.h  generativeManager.h  metaManager.h  serverPersistencePolicy.h  umlClient.h  umlServer.h
include/uml-server/generate/: generate.h  umlAbstractionStoragePolicy.h
include/uml-server/metaManager/: metaElement.h  metaElementSet.h  metaManager.h  proxyElement.h  proxyElementSet.h  setConcepts.h
src/test/: .generativeManagerTest.cpp.swp  generativeManagerTest.cpp  get_project_template.sh  metaManagerTest.cpp  umlServerTest.cpp
src/uml-server/: generativeSerializationPolicy.cpp  main.cpp  metaManager.cpp  serverPersistencePolicy.cpp  umlClient.cpp  umlServer.cpp  umlServerSerializationPolicy.cpp
